[package]
name = "batara"
version = "0.2.1"
edition = "2021"
author = "Satria Ady Pradana"

[[bin]]
name = "batara"
path = "src/main.rs"

[dependencies]
aes = "0.8.2"
base64 = "0.21"
cbc = "0.1.2"
cfg-if = "1.0"
chrono = "0.4"
ctor = "0.1.26"
hmac = "0.12.1"
litcrypt = "0.3"
minreq = { git = "https://github.com/xathrya/minreq.git", features=["https-rustls-probe"] }
path-clean = "1.0.1"
rand = "0.8.5"
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
sha2 = "0.10.8"
tokio = { version = "1.28.2", features = ["net", "rt-multi-thread", "io-util", "macros", "process"] }
libc = "0.2.152"
clroxide = "1.1.1"
goblin = "0.3"
windows-acl = "0.1.0"
wmi = "0.9.2"

[target.'cfg(target_os = "windows")'.dependencies.winapi]
version = "0.3.9"
features = [ 
    "aclapi", 
    "errhandlingapi", 
    "impl-default", 
    "memoryapi",
    "securitybaseapi", 
    "sysinfoapi",
    "tlhelp32", 
    "winbase", 
    "wincon", 
    "wow64apiset"
]

[build-dependencies]
cc = "1.0.72"