[package]
name = "xwin-test"
version = "0.1.0"
edition = "2021"

[dependencies]
wmi = "0.9.2"

[target.'cfg(target_os = "windows")'.dependencies.winapi]
version = "0.3.9"
features = [ 
    "aclapi", 
    "errhandlingapi", 
    "impl-default", 
    "memoryapi",
    "securitybaseapi", 
    "sysinfoapi",
    "tlhelp32", 
    "winbase", 
    "wincon", 
    "wow64apiset"
]